--- a/sass/_adding-products_edit.scss
+++ b/sass/_adding-products_edit.scss
@@ -20,6 +20,10 @@
   transition: opacity 0.3s ease, visibility 0.3s ease;
 }
 
+.hidden {
+  display: none;
+}
+
 .custom-phone-box.custom-hidden {
   opacity: 0;
   display: none;
@@ -28,6 +32,7 @@
 .expand-elements {
   display: flex;
   width: 100%;
+  align-items: center;
   justify-content: space-between;
   position: relative;
 }
@@ -55,12 +60,12 @@
   position: absolute;
   right: 10px;
   color: #00317d;
-  font-size: 24px;
+  font-size: 27px;
 }
 
 /* Expand search bar on focus */
 .custom-header-elem__search input:focus {
-  width: 37vw; /* Adjust this based on your layout */
+  width: 40vw; /* Adjust this based on your layout */
 }
 
 .custom-header-elem {
@@ -94,6 +99,9 @@
     background: transparent;
     overflow: hidden;
     transition: background-color 0.3s, color 0.3s;
+    & > i {
+      font-size: 24px;
+    }
     & > span {
       font-size: 24px;
     }
@@ -136,6 +144,7 @@
 .custom-phone-box {
   display: flex;
   align-items: center;
+  right: 50px;
   gap: 10px;
   &__icon {
     height: 48px;
@@ -204,6 +213,229 @@
   font-size: 32px;
 }
 
+// BASKET
+
+.basket {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  z-index: 100;
+  top: 0px;
+  background-color: rgba(0, 0, 0, 0.911);
+}
+
+.basket-hidden {
+  display: none;
+}
+
+.basket-box {
+  display: flex;
+  border-radius: 20px;
+  width: 80%;
+  flex-direction: column;
+  background-color: white;
+  margin: 50px;
+}
+.basket-header {
+  display: flex;
+  width: 100%;
+  padding: 15px;
+  justify-content: space-between;
+  align-items: center;
+  & > h2 {
+    font-size: 32px;
+    font-family: $font-family;
+    font-weight: 500;
+  }
+  & > i {
+    font-size: 32px;
+  }
+}
+
+.basket-container {
+  overflow-y: scroll;
+}
+input[type="checkbox"] {
+  width: 36px;
+  height: 36px;
+  border: 2px solid #00317d;
+  border-radius: 10px;
+  appearance: none;
+  -webkit-appearance: none;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+}
+
+input[type="checkbox"]:checked {
+  background-color: #00317d;
+  border-color: #00317d;
+}
+
+input[type="checkbox"]:checked::after {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 24px;
+  border: solid white;
+  border-width: 0 4px 4px 0;
+  transform: rotate(45deg);
+  top: 0px;
+  left: 8px;
+}
+.basket-card {
+  padding-bottom: 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.226);
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  margin: 20px;
+  & > img {
+    height: 185px;
+    width: 196px;
+    border-radius: 20px;
+  }
+}
+.box-two-elements {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 100%;
+
+  & > p {
+    font-size: 24px;
+    font-weight: 400;
+    font-family: $font-family;
+  }
+}
+
+.basket-prod-name {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.basket-two-elements {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  & > p {
+    font-size: 24px;
+    font-weight: 500;
+    font-family: $font-family;
+  }
+  & > span {
+    display: flex;
+    width: 100%;
+    font-size: 24px;
+    font-weight: 500;
+    font-family: $font-family;
+    align-items: center;
+    gap: 15px;
+    & > button {
+      padding: 15px 16px;
+      position: relative;
+      display: flex;
+      gap: 10px;
+      flex-direction: row;
+      align-items: center;
+      border-radius: 20px;
+      border: 2px solid $darkblue;
+      font-size: 24px;
+      font-weight: 400;
+      font-family: $font-family;
+      color: $darkblue;
+      z-index: 1;
+      background: transparent;
+      overflow: hidden;
+      transition: background-color 0.3s, color 0.3s;
+      &:hover {
+        color: white;
+      }
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        left: unset;
+        right: 0;
+        border-radius: 20px;
+        width: 0%;
+        height: 100%;
+        z-index: -1;
+        background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+        transition: 0.4s all ease-in-out 0s;
+      }
+      &:hover::before {
+        left: 0;
+        right: unset;
+        width: 100%;
+      }
+      &:hover .fa-trash {
+        transition: color 0.3s;
+      }
+    }
+    & > h3 {
+      font-size: 24px;
+      font-family: $font-family;
+      font-weight: 500;
+    }
+  }
+}
+
+#amount-input {
+  width: 60%; /* Adjust the width as needed */
+  padding-right: 30px; /* Space for the "pcs/L" text */
+  position: relative;
+  box-sizing: border-box;
+  font-size: 24px;
+  padding-right: 20px;
+  border-radius: 20px;
+  border: none;
+}
+
+.amount-input-container {
+  position: relative;
+  width: 23%;
+  border: 2px solid gray;
+  border-radius: 20px;
+}
+
+.amount-input-container::after {
+  content: "pcs/L";
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* Ensures the text is not clickable */
+  font-size: 24px; /* Adjust font size as needed */
+}
+
+.basket-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  align-items: center;
+  & > span {
+    font-size: 40px;
+    font-weight: 500;
+    font-family: $font-family;
+    display: flex;
+    gap: 20px;
+  }
+  & > button {
+    font-size: 40px;
+    font-family: $font-family;
+    font-weight: 700;
+    padding: 15px 109px;
+    background: linear-gradient(225deg, #17bff0 0%, #00317d 100%);
+    color: white;
+    border: none;
+    border-radius: 10px;
+  }
+}
 // main
 
 .top-sales-box {
@@ -238,12 +470,14 @@
   background-color: white;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.226);
   width: 90%;
+
   padding: 15px;
 }
 
 .top-prod-descr {
   display: flex;
   flex-direction: column;
+  color: #000;
   gap: 5px;
   width: 100%;
 }
@@ -279,7 +513,7 @@
 
   i {
     padding: 15px 0px;
-    font-size: 32px;
+    font-size: 24px;
   }
 
   span {
@@ -316,7 +550,6 @@
   }
 }
 
-// #f9f9f9
 // FILTER
 .custom-filter {
   background-color: white;
@@ -330,8 +563,8 @@
 
   h2 {
     color: $darkblue;
-    margin-bottom: 20px;
     font-size: 32px;
+    display: flex;
     font-weight: 500;
     font-family: $font-family;
     color: #000;
@@ -363,8 +596,8 @@
 
   .filter-h2 {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
   }
 
   #close-icon {
@@ -445,6 +678,11 @@
   }
 }
 
+.custom-filter-buttons .custom-btn:nth-child(2) {
+  background: $gradient;
+  color: white;
+}
+
 // HEADER ANIMATION-------//
 
 @keyframes headerShow {
@@ -452,9 +690,110 @@
     transform: translateY(0px);
   }
 }
+
+// product description page
+.product-container {
+  display: flex;
+  margin-top: 95px;
+  align-items: center;
+  gap: 20px;
+  & > img {
+    width: 522px;
+    height: 486px;
+  }
+  & > div {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    & > h2 {
+      font-size: 40px;
+      font-weight: 500;
+      font-family: $font-family;
+    }
+  }
+}
+
+.product-two-elements {
+  display: flex;
+  justify-content: space-between;
+  & > span {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    & > div {
+      display: flex;
+      padding: 5px;
+      align-items: center;
+      border-radius: 10px;
+      width: 20%;
+      border: 2px solid rgba(0, 0, 0, 0.226);
+      & > input {
+        border: none;
+        width: 100%;
+        font-size: 24px;
+      }
+      & > p {
+        font-size: 24px;
+        font-weight: 400;
+        font-family: $font-family;
+      }
+    }
+  }
+  & > button {
+    display: flex;
+    align-items: center;
+    width: 30%;
+    gap: 2px;
+    justify-content: center;
+    border-radius: 20px;
+    font-size: 24px;
+    font-weight: 400;
+    border: 2px solid #00317d;
+    color: #00317d;
+    background: transparent;
+  }
+}
+.product-two-elements > span i {
+  cursor: pointer;
+  margin: 0 5px;
+  font-size: 25px;
+  color: #00317d;
+}
+.product-two-elements > span i.disabled {
+  cursor: not-allowed;
+  color: grey;
+}
+
+.product-description {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+
+  gap: 17px;
+  & > h4 {
+    font-size: 32px;
+    font-weight: 500;
+    z-index: 2;
+    font-family: $font-family;
+  }
+  & > p {
+    font-size: 24px;
+    font-weight: 400;
+    height: 150px;
+    overflow: hidden;
+    font-family: $font-family;
+    color: gray;
+    transition: 0.5s ease;
+    margin-bottom: 200px;
+    &:hover {
+      height: 300px;
+    }
+  }
+}
+
 @media (max-width: 1880px) {
   .custom-header-elem__search input:focus {
-    width: 41vw;
+    width: 42vw;
   }
 }
 
@@ -463,7 +802,7 @@
     max-width: 1400px;
   }
   .custom-header-elem__search input:focus {
-    width: 41vw;
+    width: 45vw;
   }
 }
 
@@ -475,7 +814,7 @@
     width: 270px;
   }
   .custom-header-elem__search input:focus {
-    width: 40vw;
+    width: 42vw;
   }
   .custom-header-elem {
     height: 130px;
@@ -533,16 +872,14 @@
     }
   }
   .custom-header-elem__search input {
-    width: 240px;
+    width: 350px;
   }
   .custom-header-elem__search input:focus {
-    width: 44vw;
+    width: 50vw;
   }
+
   .custom-phone-box {
     right: 20px;
-  }
-  .custom-phone-box__numbers > a {
-    display: block;
   }
 
   // card
@@ -598,7 +935,7 @@
   }
 
   .custom-header-elem__search input:focus {
-    width: 42vw;
+    width: 45vw;
   }
   .custom-phone-box {
     right: 10px;
