--- a/sass/_edit-password.scss
+++ b/sass/_edit-password.scss
@@ -1,5 +1,3 @@
-@import "./header";
-
 .edit-pssword-ch {
   margin-top: 150px;
   width: 70%;
@@ -7,6 +5,9 @@
   flex-direction: column;
   gap: 20px;
   margin-bottom: 250px;
+}
+.header-elem__btn > i {
+  font-size: 32px;
 }
 
 .text-edit-password {
