--- a/sass/_seller-edit.scss
+++ b/sass/_seller-edit.scss
@@ -71,7 +71,7 @@ $second-family: "Inter", sans-serif;
 
 .items-card {
   display: flex;
-  box-shadow: 0 0px 15px #6b6b6b;
+  box-shadow: 0 0px 15px #9f9f9f;
   width: 100%;
   border-radius: 17px;
 }
