--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -38,7 +38,7 @@ header {
 
 .header-elem {
   width: 100%;
-  height: 150px;
+  height: 100px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -48,7 +48,7 @@ header {
     align-items: center;
     gap: 20px;
     & > img {
-      width: 105px;
+      width: 205px;
       height: 110px;
     }
   }
@@ -95,6 +95,7 @@ header {
     right: unset;
     width: 100%;
   }
+
   &__btn:hover .bx {
     transition: color 0.3s;
   }
@@ -212,7 +213,7 @@ footer {
     & > span {
       justify-content: center;
       display: flex;
-      width: 413px;
+      width: 100%;
       padding-left: 20px;
       flex-direction: column;
       gap: 15px;
@@ -232,10 +233,15 @@ footer {
     & > a {
       align-items: center;
       display: flex;
+      width: 100%;
       z-index: 1;
       gap: 23px;
       padding-inline: 43px;
       border-right: 2px solid $white;
+      & > img {
+        height: 148px;
+        width: 365px;
+      }
     }
   }
   & > h5 {
@@ -256,10 +262,16 @@ footer {
     transform: translateY(0px);
   }
 }
+@media (max-width: 1720px) {
+  .footer-elements > div > a > img {
+    width: 250px;
+    height: 150px;
+  }
+}
 
 @media (max-width: 1370px) {
   .header-elem {
-    height: 130px;
+    height: 100px;
     &__btn {
       font-size: 19px;
       & > span {
@@ -267,18 +279,22 @@ footer {
       }
     }
   }
+  .header-elem__logo > img {
+    width: 150px;
+    height: 200px;
+  }
 }
 
 @media screen and (max-width: 1200px) {
   .header-elem {
-    height: 130px;
+    height: 100px;
     &__btn {
       font-size: 19px;
     }
   }
 
   .header-elem__logo > img {
-    width: 95px;
+    width: 150px;
     height: 100px;
   }
 
