--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,8 @@
 @import "./user-info";
 @import "./adding-products_edit";
 
+// INACTIVE BUTTON STYLE------------------------------------------------------
+
 #button-inactive {
   font-size: 24px;
   grid-column: 2;
@@ -18,6 +20,20 @@
   border: none;
   color: white;
   border-radius: 10px;
+  cursor: not-allowed;
+  background: #555555;
+}
+#button-inactive2 {
+  font-size: 24px;
+  grid-column: 2;
+  font-family: $font-family;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  border: none;
+  color: white;
+  border-radius: 30px;
   cursor: not-allowed;
   background: #555555;
 }
@@ -33,14 +49,15 @@ $white: #ffffff;
 
 // fonts
 @font-face {
-  font-family: "Cunia", sans-serif;
-  src: url("fonts/Cunia.otf") format("opentype");
+  font-family: "Cunia";
+  src: url("/fonts/Cunia.otf") format("truetype");
 }
+
 $font-family: "Montserrat", sans-serif;
 $second-family: "Inter", sans-serif;
 $Cunia-family: "Cunia", sans-serif;
 h1 {
-  font-family: $Cunia-family;
+  font-family: "Cunia", sans-serif;
   color: $darkblue;
 }
 h2 {
@@ -580,6 +597,7 @@ body {
   padding-top: 150px;
   margin-bottom: 200px;
   gap: 20px;
+
   & > span {
     font-size: 24px;
     font-family: $font-family;
@@ -868,10 +886,10 @@ body {
   }
   .what-v-do2__text {
     & > h3 {
-      font-size: 24px * 0.8;
+      font-size: 24px;
     }
     & > p {
-      font-size: 19px * 0.8;
+      font-size: 19px;
       width: 100%;
     }
   }
